--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script type="text/javascript" src="processing.js"></script>
   </head>
   <body>
-    <canvas data-processing-sources="myProgram.pde"></canvas>
+    <canvas data-processing-sources="Maze1_0.pde"></canvas>
   </body>
 </html>
     
