--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
   <head>
     <title>Randomized Processing Maze</title>
     <script type="text/javascript" src="processing.js"></script>
+    <style type="text/css">
+			pre {
+				background-color: #EEE;
+				padding: 15px;
+			}
+			
+			#theCanvas {
+				width: 500px;
+				margin: auto;
+				border: 5px solid black;
+				display: block;
+			}
+		</style>
   </head>
   <body>
     <canvas data-processing-sources="Maze1_0.pde"></canvas>
