--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Randomized Processing Maze</title>
+    <title>Randomized Maze</title>
     <script type="text/javascript" src="processing.js"></script>
     <style type="text/css">
 			pre {
