Added link to this githun

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		</style>
   </head>
   <body>
-    <canvas data-processing-sources="Maze1_0.pde"></canvas>
+	  <p><a href="https://github.com/bparadee?tab=repositories">My Github Profile!</a></p> 
+	  <canvas data-processing-sources="Maze1_0.pde"></canvas>
   </body>
 </html>
     
